# programming-for-robotics

./: .gitignore  README.md
exercise/exercise1/: ex1.launch
exercise/exercise2/husky_highlevel_controller/config/: config.yaml
exercise/exercise4/: ex4_bag.launch  ex4_bag_gazebo.launch
exercise/exercise5/: crash_imu.xml
exercise/exercise5/husky_emergency_stop/: package.xml
exercise2/: ex2.launch  husky_highlevel_controller
exercise2/husky_highlevel_controller/config/: config.yaml~
exercise2/husky_highlevel_controller/src/: HuskyHighlevelController.cpp  husky_highlevel_controller_node.cpp
exercise3/husky_highlevel_controller/config/: config.yaml
exercise3/husky_highlevel_controller/src/: HuskyHighlevelController.cpp
exercise4/: ex4.launch  ex4_bag.launch  husky_filtered_position.xml  husky_filtered_position_bag.xml
exercise5/: ex4_bag.launch
exercise5/husky_emergency_stop/: CMakeLists.txt
exercise5/husky_emergency_stop/src/: HuskyEmergencyStop.cpp  husky_emergency_stop_node.cpp
exercise5/husky_emergency_stop_crash/: CMakeLists.txt  package.xml
exercise5/husky_emergency_stop_crash/include/husky_emergency_stop/: HuskyEmergencyStop.hpp
exercise5/husky_emergency_stop_crash/src/: HuskyEmergencyStop.cpp
exercise5/husky_highlevel_controller/: CMakeLists.txt  package.xml
exercise5/husky_highlevel_controller/config/: config.yaml
exercise5/husky_highlevel_controller/include/husky_highlevel_controller/: HuskyHighlevelController.hpp
exercise5/husky_highlevel_controller/src/: HuskyHighlevelController.cpp
exercise5/husky_highlevel_controller/worlds/: singlePillar.world
(+7 files in other folders)
