<?xml version="1.0"?>
<package format="2">
  <name>husky_highlevel_controller</name>
  <version>0.1.0</version>
  <description>The husky_highlevel_controller package</description>
  <maintainer email="dominic.jud@mavt.ethz.ch">Dominic Jud</maintainer>
  <license>BSD</license>
  <author email="dominic.jud@mavt.ethz.ch">Dominic Jud</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
</package>
